--- a/website/style.css
+++ b/website/style.css
@@ -5,7 +5,6 @@ body, html {
 }
 html {
     background-color:#E03A4D;
-    
 }
 body {
     background-color:#FFFFFF;
@@ -182,7 +181,10 @@ footer a {
     font-weight: bold;
     font-size: 1.2em;
 }
-
+.Can
+{
+  pointer-events:none; 
+}
 /**
  * Jumbotron
  */
